# plan2EPlus

./: .coverage  .gitignore  README.md  epcase.py  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.rdd  eplusout.shd  eplustbl.htm  filename  geometry_parser.py  helper_classes.py  helpers.py  pyproject.toml  recipies.py  roadmap.md  temp_idf.txt  test02_afn_nv.ipynb  test03_display_idf.ipynb  test04_parser.ipynb  test05_idf_edits.ipynb  wall.py  zone.py
GPLANs/inputs/: apt_2bed.ipynb
_notebooks/: t05_svg2plan.ipynb  t07_cp_equation.ipynb  t08_new_domains.ipynb  t09_doors.ipynb  t11_plans.ipynb
_notebooks/airflownetwork/: t01_afn.ipynb  t03_all_zone_surfs.ipynb
_notebooks/analysis/: t01_ach.ipynb  t03_exp01.ipynb  t04_conduction.ipynb  t05_balance.ipynb  t06_radiation.ipynb
_notebooks/gplan/: t01_gplan1.ipynb  t01_ostwald.ipynb  t03_amber.ipynb  t04_doors_and_windows.ipynb
_notebooks/output_plots/: t01_sqlplots.ipynb  t02_spatial_plots.ipynb  t03_many_spatial_plots.ipynb  t03_refine_spatial_plots.ipynb  t05_site_data.ipynb  t06_surface_data.ipynb  t07_vertex_extract.ipynb  t09_updated_def_plot.ipynb  t10_surface_as_graph.ipynb  t11_afn_plot.ipynb  t12_base_plot_reup.ipynb
_notebooks/plans/: scraps.txt  t05_svg2plan.ipynb
_notebooks/results/: t01_volume copy.ipynb  t01_volume.ipynb  t02_rate.ipynb  (+6 more)
config/: logging.dev.ini
notebooks/: t06_cp_study.ipynb  t12_tests.ipynb
test/: eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.rdd  eplustbl.htm
tests/: conftest.py  test_base_graph.py  test_create_case.py  test_domain_logic.py  test_params.py  test_plot.py  test_svg2plan_case.py  test_visual_interface.py
weather/: CA_PALO-ALTO-AP_724937S_20.epw
(+341 files in other folders)
